--- a/scripts/plops/templates/package/package.json
+++ b/scripts/plops/templates/package/package.json
@@ -1,9 +1,7 @@
 {
+  "name": "@aurora/{{camelCase name}}",
   "version": "0.0.0",
   "main": "index.js",
-  "scripts": {
-    "test": "jest"
-  },
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
