--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ cache:
   directories:
     - node_modules
 after_script: "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
