--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "coveralls": "^2.13.1",
+    "electron-builder": "^19.13.0",
     "eslint": "^4.1.1",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.7.0",
@@ -22,12 +26,10 @@
     "jest": "^20.0.4",
     "lerna": "^2.0.0",
     "plop": "^1.8.0",
-    "prettier": "^1.5.2"
+    "prettier": "^1.5.2",
+    "webpack": "^3.0.0"
   },
   "jest": {
-    "projects": [
-      "<rootDir>/packages/*"
-    ],
     "collectCoverage": true,
     "coverageDirectory": "<rootDir>/coverage",
     "coveragePathIgnorePatterns": [
