--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ addons:
   apt:
     packages:
       - xvfb
+install:
+  - npm install eslint-changes
+script:
+  - ./node_modules/.bin/eslint-changes
 cache:
   directories:
     - node_modules
