--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,6 @@
 {
   "lerna": "2.0.0-rc.5",
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
+  "npmClient": "yarn",
   "version": "0.0.0"
 }
