--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ addons:
     packages:
       - xvfb
 script:
-  - yarn lint
-  - yarn test
+  - npm run lint
+  - npm run test
 cache:
   directories:
     - node_modules
