--- a/packages/aurora-electron/package.json
+++ b/packages/aurora-electron/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@aurora/electron",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "main": "compiled/main.js",
   "description": "A note taking app.",
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "@aurora/core": "^0.0.1"
   },
   "build": {
     "appId": "tundra.aurora",
@@ -15,18 +16,21 @@
     }
   },
   "scripts": {
-    "build": "yarn run build:main; yarn run build:renderer",
+    "build": "npm run build:main; npm run build:renderer",
     "build:main": "webpack --colors --progress --config webpack.config.main.js",
     "build:renderer": "webpack --colors --progress --config webpack.config.renderer.js",
-    "build-watch:main": "yarn run build:main -- --watch",
-    "build-watch:renderer": "yarn run build:renderer -- --watch",
-    "dev": "yarn build; ./node_modules/.bin/electron .; yarn build-watch:renderer",
+    "build-watch:main": "npm run build:main -- --watch",
+    "build-watch:renderer": "npm run build:renderer -- --watch",
+    "dev": "npm run build; ./node_modules/.bin/electron .; npm run build-watch:renderer",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "postinstall": "electron-builder install-app-deps",
-    "test": "jest"
+    "test": "lerna exec npm install && jest"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "concurrently": "^3.5.0",
     "electron": "^1.6.11",
     "electron-builder": "^19.13.0",
