--- a/packages/aurora-electron/package.json
+++ b/packages/aurora-electron/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@aurora/electron",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "compiled/main.js",
   "description": "A note taking app.",
   "dependencies": {
+    "aurora-core": "*",
+    "promise": "^8.0.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "@aurora/core": "^0.0.1"
+    "react-dom": "^15.6.1"
   },
   "build": {
     "appId": "tundra.aurora",
