--- a/packages/aurora-electron/package.json
+++ b/packages/aurora-electron/package.json
@@ -4,7 +4,8 @@
   "main": "compiled/main.js",
   "description": "A note taking app.",
   "dependencies": {
-    "aurora-core": "*",
+    "@aurora/core": "*",
+    "@vx/shape": "0.0.131",
     "promise": "^8.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
@@ -25,7 +26,7 @@
     "dev": "npm run build; ./node_modules/.bin/electron .; npm run build-watch:renderer",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
-    "test": "lerna exec npm install && jest"
+    "test": "jest"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
