--- a/packages/aurora-core/package.json
+++ b/packages/aurora-core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@aurora/core",
   "version": "0.0.3",
-  "main": "index.js",
+  "main": "src/index.js",
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
