Fix Sea-floor (#14)
* remove lerna

* Add sea-floor

* Update sea-floor

* Remove test.js

--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test":
-      "./node_modules/.bin/lerna bootstrap && xvfb-maybe ./node_modules/.bin/jest --runInBand",
+    "test": "xvfb-maybe ./node_modules/.bin/jest --runInBand",
     "test-watch": "./node_modules/.bin/jest --watch --runInBand",
     "plop": "./node_modules/.bin/plop",
     "lint": "./node_modules/.bin/eslint packages",
     "lint-fix": "./node_modules/.bin/eslint --fix packages",
-    "dev": "lerna boostrap; cd ./packages/aurora-electron; npm run dev",
+    "dev": "sea dev packages/aurora-electron/src/index.js",
     "fmt":
       "./node_modules/.bin/prettier --write 'packages/**/!(compiled|build|dist)/*.js'"
   },
@@ -29,7 +28,6 @@
     "eslint-plugin-unicorn": "^2.1.2",
     "jest": "^20.0.4",
     "jest-cli": "^20.0.4",
-    "lerna": "^2.0.0-rc.5",
     "plop": "^1.8.0",
     "pre-commit": "^1.2.2",
     "prettier": "^1.5.2",
@@ -47,7 +45,7 @@
     "@vx/shape": "0.0.131",
     "babel-loader": "^7.1.2",
     "linklocal": "^2.8.1",
-    "sea-floor": "^0.2.2",
+    "sea-floor": "^0.3.2",
     "stop-if": "^1.0.1"
   }
 }
