--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ addons:
 script:
   - npm install
   - npm run lint
-  - npm run test
+  - npm run test-on-ci
 cache:
   directories:
     - node_modules
