--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "lint": "./node_modules/.bin/eslint packages",
     "lint-fix": "./node_modules/.bin/eslint --fix packages",
     "dev": "cd packages/aurora-electron; npm run dev",
-    "fmt":
-      "./node_modules/.bin/prettier --write 'packages/**/!(compiled|build|dist)/*.js'"
+    "fmt": "./node_modules/.bin/prettier --write 'packages/**/!(compiled|build|dist)/*.js'"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +20,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "coveralls": "^2.13.1",
+    "enzyme": "^2.9.1",
     "eslint": "^4.1.1",
     "eslint-plugin-fp": "^2.3.0",
     "eslint-plugin-import": "^2.7.0",
@@ -29,23 +29,37 @@
     "eslint-plugin-unicorn": "^2.1.2",
     "jest": "^20.0.4",
     "jest-cli": "^20.0.4",
+    "jest-enzyme": "^3.8.1",
     "plop": "^1.8.0",
     "pre-commit": "^1.2.2",
     "prettier": "^1.5.2",
+    "react-test-renderer": "^15.6.1",
     "webpack": "^3.0.0",
     "xvfb-maybe": "^0.2.1"
   },
   "jest": {
     "collectCoverage": true,
     "coverageDirectory": "<rootDir>/coverage",
-    "coveragePathIgnorePatterns": ["/node_modules/", "/templates/"],
-    "testPathIgnorePatterns": ["/node_modules/", "/templates/"],
-    "coverageReporters": ["text", "lcov"]
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/templates/"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/templates/"
+    ],
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ]
   },
   "dependencies": {
     "@vx/shape": "0.0.131",
     "babel-loader": "^7.1.2",
+    "draft-js": "^0.10.1",
     "linklocal": "^2.8.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "sea-floor": "^0.3.2",
     "stop-if": "^1.0.1",
     "styled-components": "^2.1.2"
