--- a/packages/aurora-electron/package.json
+++ b/packages/aurora-electron/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
     "build": "webpack --config src/renderer/renderer.config.js",
-    "dev": "npm run build & electron src/main/index.js"
+    "dev": "npm run build && electron src/main/index.js"
   }
 }
