Make cards editors instead of plain text + Add saving (#24)
* Refactor editor; Require all notes to be editors; remove search

* Remove hasCard/fixedAtBottom

* Got basic saving notes with jetpack working

* Began to got loading notes working

* Fix search

* Add tests

* Fix lint errors

* Fix merge issue

* Change messages -> notes

--- a/package.json
+++ b/package.json
@@ -61,12 +61,16 @@
     "babel-loader": "^7.1.2",
     "draft-js": "^0.10.1",
     "draftjs-utils": "^0.8.6",
+    "fs-jetpack": "^1.2.0",
     "fuse.js": "^3.1.0",
+    "keycode-js": "0.0.4",
     "linklocal": "^2.8.1",
+    "os": "^0.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "sea-floor": "^0.3.2",
-    "stop-if": "^1.0.1",
-    "styled-components": "^2.1.2"
+    "stop-if": "^1.0.3",
+    "styled-components": "^2.1.2",
+    "uuid": "^3.1.0"
   }
 }
