--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@storybook/react": "^3.2.8",
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "coveralls": "^2.13.1",
+    "electron": "^1.7.6",
     "enzyme": "^2.9.1",
     "eslint": "^4.1.1",
     "eslint-plugin-fp": "^2.3.0",
@@ -37,8 +39,7 @@
     "prettier": "^1.5.2",
     "react-test-renderer": "^15.6.1",
     "webpack": "^3.0.0",
-    "xvfb-maybe": "^0.2.1",
-    "@storybook/react": "^3.2.8"
+    "xvfb-maybe": "^0.2.1"
   },
   "jest": {
     "collectCoverage": true,
