--- a/packages/aurora-electron/package.json
+++ b/packages/aurora-electron/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "build": "webpack --config src/renderer/renderer.config.js",
-    "dev": "npm run build && ../../node_modules/.bin/electron src/main/index.js"
+    "dev":
+      "npm run build && cd .. && ../node_modules/.bin/electron aurora-electron/src/main/index.js"
   }
 }
