--- a/packages/aurora-electron/package.json
+++ b/packages/aurora-electron/package.json
@@ -2,6 +2,6 @@
   "scripts": {
     "build": "webpack --config src/renderer/renderer.config.js",
     "dev":
-      "npm run build && cd .. && cd .. && node_modules/.bin/electron packages/aurora-electron/src/main/index.js"
+      "npm run build && cd .. && cd .. && electron packages/aurora-electron/src/main/index.js"
   }
 }
