--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "./node_modules/.bin/jest",
     "test-on-ci": "xvfb-maybe ./node_modules/.bin/jest --runInBand",
-    "test-watch": "./node_modules/.bin/jest --watch --runInBand",
+    "test-watch": "./node_modules/.bin/jest --watch",
     "plop": "./node_modules/.bin/plop",
     "lint": "./node_modules/.bin/eslint packages",
     "lint-fix": "./node_modules/.bin/eslint --fix packages",
@@ -41,6 +41,7 @@
     "pre-commit": "^1.2.2",
     "prettier": "^1.5.2",
     "react-test-renderer": "^15.6.1",
+    "sinon": "^3.3.0",
     "webpack": "^3.0.0",
     "xvfb-maybe": "^0.2.1"
   },
