--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   },
   "dependencies": {
     "@vx/shape": "0.0.131",
+    "animate-css-styled-components": "0.0.19",
     "babel-loader": "^7.1.2",
     "draft-js": "^0.10.1",
     "draftjs-utils": "^0.8.6",
