--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   "license": "ISC",
   "devDependencies": {
     "@storybook/react": "^3.2.8",
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^7.2.3",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "coveralls": "^2.13.1",
@@ -40,8 +41,8 @@
     "pre-commit": "^1.2.2",
     "prettier": "^1.5.2",
     "react-test-renderer": "^15.6.1",
-    "tmp": "0.0.33",
     "sinon": "^3.3.0",
+    "tmp": "0.0.33",
     "webpack": "^3.0.0",
     "xvfb-maybe": "^0.2.1"
   },
