--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@aurora/aurora",
+  "name": "aurora",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "packages/aurora-electron/src/main/index.js",
   "scripts": {
     "test": "./node_modules/.bin/jest",
     "test-on-ci": "xvfb-maybe ./node_modules/.bin/jest --runInBand",
@@ -11,9 +11,11 @@
     "lint": "./node_modules/.bin/eslint packages",
     "lint-fix": "./node_modules/.bin/eslint --fix packages",
     "dev": "cd packages/aurora-electron && NODE_ENV=dev npm run dev",
-    "fmt": "./node_modules/.bin/prettier --write 'packages/**/!(compiled|build|dist)/*.js'",
+    "fmt":
+      "./node_modules/.bin/prettier --write 'packages/**/!(compiled|build|dist)/*.js'",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "dist": "./node_modules/.bin/electron-packager . --out ./dist --overwrite"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +30,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "coveralls": "^2.13.1",
     "electron": "^1.7.6",
+    "electron-packager": "^9.1.0",
     "enzyme": "^2.9.1",
     "eslint": "^3.19.0",
     "eslint-plugin-fp": "^2.3.0",
@@ -50,18 +53,9 @@
   "jest": {
     "collectCoverage": true,
     "coverageDirectory": "<rootDir>/coverage",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/templates/"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/templates/"
-    ],
-    "coverageReporters": [
-      "text",
-      "lcov"
-    ]
+    "coveragePathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
+    "testPathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
+    "coverageReporters": ["text", "lcov"]
   },
   "dependencies": {
     "animate-css-styled-components": "0.0.19",
@@ -76,5 +70,27 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "styled-components": "^2.1.2"
+  },
+  "build": {
+    "appId": "com.flaque.penguin",
+    "mac": {
+      "category": "public.app-category.graphics-design",
+      "target": ["pkg", "dmg", "zip", "mas"],
+      "entitlements": "packages/aurora-electron/build/entitlements.mac.plist",
+      "type": "distribution",
+      "icon": "packages/aurora-electron/build/icon.icns"
+    },
+    "mas": {
+      "entitlements": "build/entitlements.mas.plist",
+      "type": "distribution",
+      "category": "public.app-category.graphics-design"
+    },
+    "files": [
+      "main.js",
+      "node_modules/**/*",
+      "app/**/*",
+      "package.json",
+      "embedded.provisionprofile"
+    ]
   }
 }
