--- a/package.json
+++ b/package.json
@@ -11,13 +11,10 @@
     "lint": "./node_modules/.bin/eslint packages",
     "lint-fix": "./node_modules/.bin/eslint --fix packages",
     "dev": "cd packages/aurora-electron && NODE_ENV=dev npm run dev",
-    "dev-windows":
-      "cd packages/aurora-electron && set NODE_ENV=dev && npm run dev",
+    "dev-windows": "cd packages/aurora-electron && set NODE_ENV=dev && npm run dev",
     "prod": "cd packages/aurora-electron && NODE_ENV=prod npm run dev",
-    "prod-windows":
-      "cd packages/aurora-electron && set NODE_ENV=prod && npm run dev",
-    "fmt":
-      "./node_modules/.bin/prettier --write 'packages/**/!(compiled|build|dist)/*.js'",
+    "prod-windows": "cd packages/aurora-electron && set NODE_ENV=prod && npm run dev",
+    "fmt": "./node_modules/.bin/prettier --write 'packages/**/!(compiled|build|dist)/*.js'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "dist": "./node_modules/.bin/electron-packager . --out ./dist --overwrite"
@@ -59,9 +56,20 @@
   "jest": {
     "collectCoverage": true,
     "coverageDirectory": "<rootDir>/coverage",
-    "coveragePathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
-    "testPathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
-    "coverageReporters": ["text", "lcov"]
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/templates/",
+      "/dist/"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/templates/",
+      "/dist/"
+    ],
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ]
   },
   "dependencies": {
     "animate-css-styled-components": "0.0.19",
@@ -70,6 +78,7 @@
     "draft-js": "^0.10.1",
     "fs-jetpack": "^1.2.0",
     "fuse.js": "^3.1.0",
+    "immutable-props": "^1.1.0",
     "linklocal": "^2.8.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
@@ -81,7 +90,12 @@
     "appId": "com.flaque.penguin",
     "mac": {
       "category": "public.app-category.graphics-design",
-      "target": ["pkg", "dmg", "zip", "mas"],
+      "target": [
+        "pkg",
+        "dmg",
+        "zip",
+        "mas"
+      ],
       "entitlements": "packages/aurora-electron/build/entitlements.mac.plist",
       "type": "distribution",
       "icon": "packages/aurora-electron/build/icon.icns"
