--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-feather": "^1.0.7",
+    "react-mutate": "^0.3.1",
     "styled-components": "^2.1.2"
   },
   "build": {
