--- a/lib/note/package.json
+++ b/lib/note/package.json
@@ -1,10 +1,11 @@
 {
   "name": "note",
   "version": "1.0.0",
-  "description": "The data model for a note. Handles other utilities relating to notes.",
+  "description":
+    "The data model for a note. Handles other utilities relating to notes.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "KMac",
   "license": "ISC"
