--- a/lib/io/package.json
+++ b/lib/io/package.json
@@ -4,7 +4,7 @@
   "description": "Handles saving, loading, deleting notes and preferences.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "KMac",
   "license": "ISC"
