--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
     "lint": "./node_modules/.bin/eslint lib app",
     "lint-fix": "./node_modules/.bin/eslint --fix lib app",
     "dev": "NODE_ENV=dev && npm run build && electron app/main/index.js",
-    "dev-windows":
-      "set NODE_ENV=dev && npm run build && electron app/main/index.js",
-    "fmt":
-      "./node_modules/.bin/prettier --write '!(coverage|scripts|.vscode|node_modules)/**/!(.compiled|build|dist)/*.js'",
+    "dev-windows": "set NODE_ENV=dev && npm run build && electron app/main/index.js",
+    "fmt": "./node_modules/.bin/prettier --write '!(coverage|scripts|.vscode|node_modules)/**/!(.compiled|build|dist)/*.js'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "dist": "./node_modules/.bin/electron-packager . --out ./dist --overwrite"
@@ -35,6 +33,7 @@
     "devtron": "^1.4.0",
     "electron": "^1.7.9",
     "electron-packager": "^9.1.0",
+    "electron-react-devtools": "^0.4.0",
     "enzyme": "^2.9.1",
     "eslint": "^3.19.0",
     "eslint-plugin-fp": "^2.3.0",
@@ -57,9 +56,20 @@
   "jest": {
     "collectCoverage": true,
     "coverageDirectory": "<rootDir>/coverage",
-    "coveragePathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
-    "testPathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
-    "coverageReporters": ["text", "lcov"]
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/templates/",
+      "/dist/"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/templates/",
+      "/dist/"
+    ],
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ]
   },
   "dependencies": {
     "@react-mutate/core": "^0.4.4",
@@ -80,7 +90,12 @@
     "appId": "com.flaque.penguin",
     "mac": {
       "category": "public.app-category.graphics-design",
-      "target": ["pkg", "dmg", "zip", "mas"],
+      "target": [
+        "pkg",
+        "dmg",
+        "zip",
+        "mas"
+      ],
       "entitlements": "app/build/entitlements.mac.plist",
       "type": "distribution",
       "icon": "app/build/icon.icns"
