--- a/lib/note/package.json
+++ b/lib/note/package.json
@@ -5,7 +5,7 @@
     "The data model for a note. Handles other utilities relating to notes.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "NODE_ENV=test jest"
   },
   "author": "KMac",
   "license": "ISC"
