--- a/package.json
+++ b/package.json
@@ -5,15 +5,29 @@
   "main": "app/main/index.js",
   "scripts": {
     "build": "webpack --config app/renderer/renderer.config.js",
-    "test": "./node_modules/.bin/jest",
+    "db-migrate-create":
+      "node node_modules/db-migrate/bin/db-migrate create $NAME -e dev",
+    "test": "NODE_ENV=test ./node_modules/.bin/jest",
     "test-on-ci": "xvfb-maybe ./node_modules/.bin/jest --runInBand",
     "test-watch": "./node_modules/.bin/jest --watch",
     "plop": "./node_modules/.bin/plop",
     "lint": "./node_modules/.bin/eslint lib app",
     "lint-fix": "./node_modules/.bin/eslint --fix lib app",
     "dev": "NODE_ENV=dev && npm run build && electron app/main/index.js",
-    "dev-windows": "set NODE_ENV=dev && npm run build && electron app/main/index.js",
-    "fmt": "./node_modules/.bin/prettier --write '!(coverage|scripts|.vscode|node_modules)/**/!(.compiled|build|dist)/*.js'",
+    "prod": "NODE_ENV=prod && npm run build && electron app/main/index.js",
+    "dev-down": "node node_modules/db-migrate/bin/db-migrate down -e dev",
+    "prod-down": "node node_modules/db-migrate/bin/db-migrate down -e prod",
+    "test-down": "node node_modules/db-migrate/bin/db-migrate down -e test",
+    "dev-up": "node node_modules/db-migrate/bin/db-migrate up -e dev",
+    "prod-up": "node node_modules/db-migrate/bin/db-migrate up -e prod",
+    "test-up": "node node_modules/db-migrate/bin/db-migrate up -e test",
+    "dev-reset": "node node_modules/db-migrate/bin/db-migrate reset -e dev",
+    "prod-reset": "node node_modules/db-migrate/bin/db-migrate reset -e prod",
+    "test-reset": "node node_modules/db-migrate/bin/db-migrate reset -e test",
+    "dev-windows":
+      "set NODE_ENV=dev && npm run build && electron app/main/index.js",
+    "fmt":
+      "./node_modules/.bin/prettier --write '!(coverage|scripts|.vscode|node_modules)/**/!(.compiled|build|dist)/*.js'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "dist": "./node_modules/.bin/electron-packager . --out ./dist --overwrite"
@@ -55,29 +69,23 @@
   "jest": {
     "collectCoverage": true,
     "coverageDirectory": "<rootDir>/coverage",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/templates/",
-      "/dist/"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/templates/",
-      "/dist/"
-    ],
-    "coverageReporters": [
-      "text",
-      "lcov"
-    ]
+    "coveragePathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
+    "testPathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
+    "coverageReporters": ["text", "lcov"]
   },
   "dependencies": {
     "@react-mutate/core": "^0.4.4",
     "@react-mutate/loader": "^0.4.4",
     "animate-css-styled-components": "0.0.19",
+    "bookshelf": "^0.10.4",
+    "bookshelf-cascade-delete": "^2.0.1",
+    "db-migrate": "^0.10.0-beta.24",
+    "db-migrate-sqlite3": "^0.2.1",
     "draft-js": "^0.10.1",
     "fs-jetpack": "^1.2.0",
     "fuse.js": "^3.1.0",
     "immutable-props": "^1.1.0",
+    "knex": "^0.13.0",
     "linklocal": "^2.8.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
@@ -91,12 +99,7 @@
     "appId": "com.flaque.penguin",
     "mac": {
       "category": "public.app-category.graphics-design",
-      "target": [
-        "pkg",
-        "dmg",
-        "zip",
-        "mas"
-      ],
+      "target": ["pkg", "dmg", "zip", "mas"],
       "entitlements": "app/build/entitlements.mac.plist",
       "type": "distribution",
       "icon": "app/build/icon.icns"
