--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app/main/index.js",
   "scripts": {
     "build": "webpack --config app/renderer/renderer.config.js",
-    "db-migrate-create":
-      "node node_modules/db-migrate/bin/db-migrate create $NAME -e dev",
+    "db-migrate-create": "node node_modules/db-migrate/bin/db-migrate create $NAME -e dev",
     "test": "NODE_ENV=test ./node_modules/.bin/jest",
     "test-on-ci": "xvfb-maybe ./node_modules/.bin/jest --runInBand",
     "test-watch": "./node_modules/.bin/jest --watch",
@@ -24,10 +23,8 @@
     "dev-reset": "node node_modules/db-migrate/bin/db-migrate reset -e dev",
     "prod-reset": "node node_modules/db-migrate/bin/db-migrate reset -e prod",
     "test-reset": "node node_modules/db-migrate/bin/db-migrate reset -e test",
-    "dev-windows":
-      "set NODE_ENV=dev && npm run build && electron app/main/index.js",
-    "fmt":
-      "./node_modules/.bin/prettier --write '!(coverage|scripts|.vscode|node_modules)/**/!(.compiled|build|dist)/*.js'",
+    "dev-windows": "set NODE_ENV=dev && npm run build && electron app/main/index.js",
+    "fmt": "./node_modules/.bin/prettier --write '!(coverage|scripts|.vscode|node_modules)/**/!(.compiled|build|dist)/*.js'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "dist": "./node_modules/.bin/electron-packager . --out ./dist --overwrite"
@@ -38,6 +35,7 @@
     "@storybook/addon-actions": "^3.2.10",
     "@storybook/addon-links": "^3.2.10",
     "@storybook/react": "^3.2.8",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
@@ -69,9 +67,20 @@
   "jest": {
     "collectCoverage": true,
     "coverageDirectory": "<rootDir>/coverage",
-    "coveragePathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
-    "testPathIgnorePatterns": ["/node_modules/", "/templates/", "/dist/"],
-    "coverageReporters": ["text", "lcov"]
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/templates/",
+      "/dist/"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/templates/",
+      "/dist/"
+    ],
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ]
   },
   "dependencies": {
     "@react-mutate/core": "^0.4.4",
@@ -99,7 +108,12 @@
     "appId": "com.flaque.penguin",
     "mac": {
       "category": "public.app-category.graphics-design",
-      "target": ["pkg", "dmg", "zip", "mas"],
+      "target": [
+        "pkg",
+        "dmg",
+        "zip",
+        "mas"
+      ],
       "entitlements": "app/build/entitlements.mac.plist",
       "type": "distribution",
       "icon": "app/build/icon.icns"
