--- a/package.json
+++ b/package.json
@@ -76,9 +76,12 @@
     "@react-mutate/loader": "^0.4.4",
     "animate-css-styled-components": "0.0.19",
     "draft-js": "^0.10.1",
+    "electron-debug": "^1.4.0",
+    "electron-default-menu": "^1.0.1",
     "fs-jetpack": "^1.2.0",
     "fuse.js": "^3.1.0",
     "immutable-props": "^1.1.0",
+    "isdev": "^1.0.1",
     "linklocal": "^2.8.1",
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
